# AdventOfCode-2022

./: aoc2022-haskell.cabal  cabal.project
app/: Day1.hs  Main.hs
