cabal-version:      2.4
name:               aoc2022-haskell
version:            0.1.0.0

author:             spider
maintainer:         spider@tilde.cafe


extra-source-files: CHANGELOG.md

executable aoc2022-haskell
    main-is:          Main.hs

    ghc-options:        -Wall -Werror=incomplete-patterns
    default-extensions:
        ImportQualifiedPost
        LambdaCase
        OverloadedStrings
        TypeApplications
        BlockArguments

    build-depends:    
        , advent-of-code
        , base              ^>=4.16.3.0
        , text
        , text-show
        , split
    hs-source-dirs:   app
    default-language: GHC2021

    other-modules:
        Day1
